fix: Enable flex wrapping to avoid overflow on small screens

--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,6 @@ footer {
   justify-content: center;
   background-color: rgb(70, 202, 225);
   border-radius: 5px 5px 0 0;
-
 }
 
 .project-content {
@@ -112,6 +111,7 @@ footer {
 footer p span {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   gap: 10px;
 }
 
@@ -152,7 +152,7 @@ footer svg {
   .info {
     flex-direction: column;
   }
-  header img{
+  header img {
     border-radius: 5px 5px 0 0;
   }
   img {
